--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Tiro ai dadi</title>
 </head>
 <body>
+
+    <div id="primo">Hai gettato un </div>
+
+    <div id="secondo">È stato gettato un </div>
+
     <script src="js/script.js">
     </script>
 </body>
