add finale e css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiro ai dadi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section class="generatore">
+        <div id="primo">
+            Hai gettato un 
+        </div>
+        <div id="secondo">
+            È stato gettato un 
+        </div>
+    </section>
 
-    <div id="primo">Hai gettato un </div>
-
-    <div id="secondo">È stato gettato un </div>
+    <section class="finale">
+        <div id="risultato">
+            
+        </div>
+    </section>
 
     <script src="js/script.js">
     </script>
