--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <body>        
+    <header>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Altri giochi</a>
+            <a href="">Social</a>
+        </nav>
+    </header>
+    <main>        
         <section class="generatore">
             <div id="primo">
                 Hai gettato un 
@@ -23,7 +30,7 @@
     
             </div>
         </section>
-    </body>
+    </main>
 
     <script src="js/script.js">
     </script>
