--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <header>
         <nav>
-            <a href="">Home</a>
-            <a href="">Altri giochi</a>
-            <a href="">Social</a>
+            <div class="navigazione">
+                <a href="">Home</a>
+                <a href="">Altri giochi</a>
+                <a href="">Social</a>
+            </div>
         </nav>
     </header>
     <main>        
